--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
 <body>
   <div id="container">
   	<div id="user_nav">
+  		<%= link_to "Sign in with Facebook", "auth/facebook/"%>
   		<% if user_signed_in? %>
   		Signed in as <%= current_user.email %>. Not you?
   			<%= link_to "Sign out", destroy_user_session_path, method: 'delete' %>
