--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,9 +1,11 @@
 <h1>Comments</h1>
 
 <div id="comments">
-  <% @comments.each do |comment} %> 
+  <% @comments.each do |comment| %> 
   <div class="comment">
   <%= simple_format comment.content %> 
-  </dov>
+  </div>
  <% end %> 
 </div> 
+
+<p> <%= link_to "New Comment", [:new, @commentable, :comment] %></p> 
