--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,2 +1,24 @@
-<h1>Comments#new</h1>
-<p>Find me in app/views/comments/new.html.erb</p>
+<h1>New Comment<h1>
+
+<%= form_for [@commentable, @comment] do |f| %>
+  <% if @comment.errors.any? %> 
+  <div class="error_messages">
+    <h2>Please correct the following errors.<h2>
+    <% @comment.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+    <% end %> 
+    </ul>
+   </div>
+ <% end %> 
+
+
+ <div class="field">
+ 	<%= f.text_area :content, rows: 8 %>
+ </div>
+ <div class="actions">
+ 	<%= f.submit %>
+ </div>
+<% end %> 
+
+<!-- 
+this is just a form for editing content. the difference is that we'r epasisng in the form for commentable and comment in an array  -->
