--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -31,3 +31,259 @@
 <br>
 
 <%= link_to 'New Project', new_project_path %>
+
+
+<!doctype html>
+<html>
+  <head>
+    <link href="css/bootstrap.css" rel='stylesheet'>
+    <link href="css/style.css" rel='stylesheet'>
+  </head>
+  <body>
+    <div class="header">
+      <div class="container">
+        <div class="col-md-2">
+          <img src="img/logo.png" width="161px">
+        </div>
+        <div class="col-md-3">
+          <ul class="primary">
+            <li>Discover</li>
+            <li>Start</li>
+          </ul>
+        </div>
+        <div class="pull-right">
+          <ul>
+            <li><a href="#">Sign up</a></li>
+            <li><a href="#">Log in</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <div class="project">
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-5">
+            <img src="http://placehold.it/499x374" width="100%">
+          </div>
+          <div class="col-xs-7">
+            <h3 class="title">Title goes here</h3>
+            <p class="author">by Author Here</p>
+            <p class="description">Description goes here</p>
+            <div class="progress">
+              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
+                <span class="sr-only">40% Complete (success)</span>
+              </div>
+            </div>                
+          </div>
+
+          <div class="col-xs-1">
+            <h4>60%</h4>
+            <h5>funded</h5>
+          </div>
+          <div class="col-xs-1">
+            <h4>$18,246</h4>
+            <h5>pledged</h5>
+          </div>
+          <div class="col-xs-1">
+            <h4>187</h4>
+            <h5>backers</h5>
+          </div>
+          <div class="col-xs-2">
+            <h4>11</h4>
+            <h5>days to go</h5>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="popular">
+      <div class="container">
+        <div class="row">
+          
+          <div class="col-sm-4">
+            <h2>New &amp; Noteworthy</h2>
+            <div class="thumbnail">
+              <img src="http://placehold.it/358x265">
+              <div class="caption">
+                <h3 class="title">Title goes here</h3>
+                <p class="author">by Author Here</p>
+                <p class="description">Description goes here</p>
+                
+                <div class="progress">
+                  <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
+                    <span class="sr-only">40% Complete (success)</span>
+                  </div>
+                </div> 
+
+                <div class="row">
+                  <div class="col-xs-3">
+                    <h4>60%</h4>
+                    <h5>funded</h5>
+                  </div>
+                  <div class="col-xs-3">
+                    <h4>$18,246</h4>
+                    <h5>pledged</h5>
+                  </div>
+                  <div class="col-xs-3">
+                    <h4>11</h4>
+                    <h5>days to go</h5>
+                  </div>                
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-sm-4">
+            <h2>What's Popular</h2>
+            <div class="thumbnail">
+              <img src="http://placehold.it/358x265">
+              <div class="caption">
+                <h3 class="title">Title goes here</h3>
+                <p class="author">by Author Here</p>
+                <p class="description">Description goes here</p>
+                
+                <div class="progress">
+                  <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
+                    <span class="sr-only">40% Complete (success)</span>
+                  </div>
+                </div> 
+
+                <div class="row">
+                  <div class="col-xs-3">
+                    <h4>60%</h4>
+                    <h5>funded</h5>
+                  </div>
+                  <div class="col-xs-3">
+                    <h4>$18,246</h4>
+                    <h5>pledged</h5>
+                  </div>
+                  <div class="col-xs-3">
+                    <h4>11</h4>
+                    <h5>days to go</h5>
+                  </div>                
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-sm-4">
+            <h2>Art in New York</h2>
+            <div class="thumbnail">
+              <img src="http://placehold.it/358x265">
+              <div class="caption">
+                <h3 class="title">Title goes here</h3>
+                <p class="author">by Author Here</p>
+                <p class="description">Description goes here</p>
+                
+                <div class="progress">
+                  <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
+                    <span class="sr-only">40% Complete (success)</span>
+                  </div>
+                </div> 
+
+                <div class="row">
+                  <div class="col-xs-3">
+                    <h4>60%</h4>
+                    <h5>funded</h5>
+                  </div>
+                  <div class="col-xs-3">
+                    <h4>$18,246</h4>
+                    <h5>pledged</h5>
+                  </div>
+                  <div class="col-xs-3">
+                    <h4>11</h4>
+                    <h5>days to go</h5>
+                  </div>                
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
+    <div class="promo">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <h2>Success</h2>
+          </div>
+          <div class="col-md-4">
+            <h2>Community</h2>
+          </div>
+          <div class="col-md-4">
+            <h2>Start</h2>
+          </div>
+        </div>
+      </div>
+    </div>
+            
+    <div class="footer">
+      <div class="container">
+        <div class="links row">
+          <div class="col-sm-3">
+            <h5>About us</h5>
+            <ul>
+              <li>What is Kickstarter?</li>
+              <li>2013 highlights</li>
+              <li>Who we are</li>
+              <li>Jobs</li>
+              <li>Press</li>
+              <li>Stats</li>
+              <li>Projects we love</li>
+            </ul>
+          </div>
+          <div class="col-sm-5">
+            <h5>Discover</h5>
+            <div class="row">
+              <div class="col-xs-6">
+                <ul>
+                  <li>Art</li>
+                  <li>Comics</li>
+                  <li>Crafts</li>
+                  <li>Dance</li>
+                  <li>Design</li>
+                  <li>Fashion</li>
+                  <li>Fashion</li>
+                  <li>Film &amp; Video</li>
+                  <li>Food</li>
+                </ul>
+              </div>
+              <div class="col-xs-6">
+                <ul>
+                  <li>Games</li>
+                  <li>Journalism</li>
+                  <li>Music</li>
+                  <li>Photography</li>
+                  <li>Publishing</li>
+                  <li>Technology</li>
+                  <li>Theater</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-3">
+            <h5>Hello</h5>
+            <ul>
+              <li>Twitter</li>
+              <li>Facebook</li>
+              <li>Tumblr</li>
+              <li>Instagram</li>
+              <li>Vine</li>
+            </ul>
+          </div>
+        </div>
+        <div class="bottom row">
+          <div class="col-md-2">
+            <img src="img/logo-grey.png" width="161px">
+          </div>
+          <div class="pull-right">
+            <p>&copy; 2014 Kickstarter, Inc</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
