--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,62 +1,303 @@
-
-<%= render 'shared/header' %>
-
-<!-- jumbtron -->
+<!doctype html>
+<html>
+  <head>
+    <link href="css/bootstrap.css" rel='stylesheet'>
+    <link href="css/style.css" rel='stylesheet'>
+  </head>
+  <body>
+    <div class="header">
+      <div class="container">
+        <div class="col-md-2">
+          <img src="img/logo.png" width="161px">
+        </div>
+        <div class="col-md-3">
+          <ul class="primary">
+            <li>Discover</li>
+            <li>Start</li>
+          </ul>
+        </div>
+        <div class="pull-right">
+          <ul>
+            <li><a href="#">Sign up</a></li>
+            <li><a href="#">Log in</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
 
     <div class="jumbotron">
+      <video autoplay muted loop> 
+        <source src="home.mp4" type="video/mp4"></source>
+        <img src="home.jpg">
+      </video>
+      <div class="container content">
+        <h1>Bring creative projects to life</h1>
+        <a href="#" class="btn btn-kickstarter">Learn more</a>
+      </div>
+    </div>
+
+    <div class="staff-picks">
       <div class="container">
         <div class="row">
-          <div class="col-md-6">
-            <h1>Bring creative projects to life</h1>
+          <div class="content col-sm-10">
+            <div class="row">
+              <div class="col-xs-4">
+                <h2>Staff Picks: Technology</h2>
+              </div>
+              <div class="see-all pull-right">
+                <a href="#">See all Technology projects</a>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-xs-5">
+                <img src="http://placehold.it/390x280" width="100%">
+              </div>
+              <div class="col-xs-7">
+                <h3 class="title">Title goes here</h3>
+                <p class="author">by Author Here</p>
+                <p class="description">Description goes here</p>
+                <ul class="meta">
+                  <li><span class="glyphicon glyphicon-tag"></span>Codecademy</li>
+                  <li><span class="glyphicon glyphicon-map-marker"></span>New York, NY</li>
+                </ul>
+
+                <div class="progress">
+                  <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
+                    <span class="sr-only">40% Complete (success)</span>
+                  </div>
+                </div>                
+              </div>
+
+              <div class="col-xs-1">
+                <h4>60%</h4>
+                <h5>funded</h5>
+              </div>
+              <div class="col-xs-1">
+                <h4>$18,246</h4>
+                <h5>pledged</h5>
+              </div>
+              <div class="col-xs-1">
+                <h4>187</h4>
+                <h5>backers</h5>
+              </div>
+              <div class="col-xs-2">
+                <h4>11</h4>
+                <h5>days to go</h5>
+              </div>
+
+            </div>
+          </div>
+
+          <div class="nav col-sm-2">
+            <ul>
+              <li>Art</li>
+              <li>Comics</li>
+              <li>Crafts</li>
+              <li>Dance</li>
+              <li>Design</li>
+              <li>Fashion</li>
+              <li>Fashion</li>
+              <li>Film &amp; Video</li>
+              <li>Food</li>
+              <li>Games</li>
+              <li>Journalism</li>
+              <li>Music</li>
+              <li>Photography</li>
+              <li>Publishing</li>
+              <li>Technology</li>
+              <li>Theater</li>
+            </ul>
           </div>
         </div>
       </div>
     </div>
 
-<!-- kickstarter project -->
-
-    <div class="trending">
+    <div class="popular">
       <div class="container">
-        <h2>Popular</h2>
-        <p>Discover finds from around the marketplace.</p>
-        <div class="row trending-listing">
-          <div class="col-md-4">
+        <h2>What's Popular</h2>
+        <div class="row">
+          
+          <div class="col-sm-4">
             <div class="thumbnail">
-              <img src="https://s3.amazonaws.com/ksr/projects/252487/photo-main.jpg?1397789471">
+              <img src="http://placehold.it/358x265">
               <div class="caption">
-                <span class="listing-title">Large gold leather bag</span>
-                <span class="listing-price">$100.00</span>
+                <h3 class="title">Title goes here</h3>
+                <p class="author">by Author Here</p>
+                <p class="description">Description goes here</p>
+                
+                <div class="progress">
+                  <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
+                    <span class="sr-only">40% Complete (success)</span>
+                  </div>
+                </div> 
+
+                <div class="row">
+                  <div class="col-xs-3">
+                    <h4>60%</h4>
+                    <h5>funded</h5>
+                  </div>
+                  <div class="col-xs-3">
+                    <h4>$18,246</h4>
+                    <h5>pledged</h5>
+                  </div>
+                  <div class="col-xs-3">
+                    <h4>11</h4>
+                    <h5>days to go</h5>
+                  </div>                
+                </div>
               </div>
             </div>
           </div>
-          <div class="col-md-4">
+
+          <div class="col-sm-4">
             <div class="thumbnail">
-              <img src="https://s3.amazonaws.com/ksr/projects/252487/photo-main.jpg?1397789471">
+              <img src="http://placehold.it/358x265">
               <div class="caption">
-                <span class="listing-title">Large gold leather bag</span>
-                <span class="listing-price">$15.00</span>
+                <h3 class="title">Title goes here</h3>
+                <p class="author">by Author Here</p>
+                <p class="description">Description goes here</p>
+                
+                <div class="progress">
+                  <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
+                    <span class="sr-only">40% Complete (success)</span>
+                  </div>
+                </div> 
+
+                <div class="row">
+                  <div class="col-xs-3">
+                    <h4>60%</h4>
+                    <h5>funded</h5>
+                  </div>
+                  <div class="col-xs-3">
+                    <h4>$18,246</h4>
+                    <h5>pledged</h5>
+                  </div>
+                  <div class="col-xs-3">
+                    <h4>11</h4>
+                    <h5>days to go</h5>
+                  </div>                
+                </div>
               </div>
             </div>
           </div>
-          <div class="col-md-4">
+
+          <div class="col-sm-4">
             <div class="thumbnail">
-              <img src="https://s3.amazonaws.com/ksr/projects/252487/photo-main.jpg?1397789471">
+              <img src="http://placehold.it/358x265">
               <div class="caption">
-                <span class="listing-title">Large gold leather bag</span>
-                <span class="listing-price">$160.00</span>
+                <h3 class="title">Title goes here</h3>
+                <p class="author">by Author Here</p>
+                <p class="description">Description goes here</p>
+                
+                <div class="progress">
+                  <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
+                    <span class="sr-only">40% Complete (success)</span>
+                  </div>
+                </div> 
+
+                <div class="row">
+                  <div class="col-xs-3">
+                    <h4>60%</h4>
+                    <h5>funded</h5>
+                  </div>
+                  <div class="col-xs-3">
+                    <h4>$18,246</h4>
+                    <h5>pledged</h5>
+                  </div>
+                  <div class="col-xs-3">
+                    <h4>11</h4>
+                    <h5>days to go</h5>
+                  </div>                
+                </div>
               </div>
             </div>
           </div>
+
         </div>
       </div>
     </div>
 
-<!-- sign in with facebook -->
-
-    <div class="facebook">
+    <div class="discover">
       <div class="container">
+        <h2>Discover great projects with your friends!</h2>
+        <a href="#" class="btn btn-facebook">Connect with Facebook</a>
       </div>
-    </div> 
+    </div>
 
+    <div class="feature">
+      <div class="container">
+        <h2>Where projects come from</h2>
+        <p>Each and every Kickstarter project is the independent creation of someone like you.</p>
+        <p>Want to know more about how projects happen, or start your own?</p>
+        <a href="#" class="btn btn-kickstarter">Learn more</a>
+      </div>
+    </div>
 
-<%= render 'shared/footer' %>
+    <div class="footer">
+      <div class="container">
+        <div class="links row">
+          <div class="col-sm-3">
+            <h5>About us</h5>
+            <ul>
+              <li>What is Kickstarter?</li>
+              <li>2013 highlights</li>
+              <li>Who we are</li>
+              <li>Jobs</li>
+              <li>Press</li>
+              <li>Stats</li>
+              <li>Projects we love</li>
+            </ul>
+          </div>
+          <div class="col-sm-5">
+            <h5>Discover</h5>
+            <div class="row">
+              <div class="col-xs-6">
+                <ul>
+                  <li>Art</li>
+                  <li>Comics</li>
+                  <li>Crafts</li>
+                  <li>Dance</li>
+                  <li>Design</li>
+                  <li>Fashion</li>
+                  <li>Fashion</li>
+                  <li>Film &amp; Video</li>
+                  <li>Food</li>
+                </ul>
+              </div>
+              <div class="col-xs-6">
+                <ul>
+                  <li>Games</li>
+                  <li>Journalism</li>
+                  <li>Music</li>
+                  <li>Photography</li>
+                  <li>Publishing</li>
+                  <li>Technology</li>
+                  <li>Theater</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-3">
+            <h5>Hello</h5>
+            <ul>
+              <li>Twitter</li>
+              <li>Facebook</li>
+              <li>Tumblr</li>
+              <li>Instagram</li>
+              <li>Vine</li>
+            </ul>
+          </div>
+        </div>
+        <div class="bottom row">
+          <div class="col-md-2">
+            <img src="img/logo-grey.png" width="161px">
+          </div>
+          <div class="pull-right">
+            <p>&copy; 2014 Kickstarter, Inc</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
