--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -22,3 +22,151 @@
 
 <%= link_to 'Edit', edit_project_path(@project) %> |
 <%= link_to 'Back', projects_path %>
+
+
+<!doctype html>
+<html>
+  <head>
+    <link href="css/bootstrap.css" rel='stylesheet'>
+    <link href="css/style.css" rel='stylesheet'>
+  </head>
+  <body>
+    <div class="header">
+      <div class="container">
+        <div class="col-md-2">
+          <img src="img/logo.png" width="161px">
+        </div>
+        <div class="col-md-3">
+          <ul class="primary">
+            <li>Discover</li>
+            <li>Start</li>
+          </ul>
+        </div>
+        <div class="pull-right">
+          <ul>
+            <li><a href="#">Sign up</a></li>
+            <li><a href="#">Log in</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <div class="wrap">
+      <div class="project-content">
+        <div class="container">
+          <h1 class="title">Title goes here</h1>
+          <p class="author">by Author here</p> 
+          <div class="project-nav">
+            <ul>
+              <li class="active">Home</li>
+              <li>Comments <span class="label label-default">7</span></li>
+          </div>
+          <div class="project-body">
+            <div class="row">
+              <div class="col-md-8">
+                <img class="img-responsive" src="http://placehold.it/722x541">
+                <p class="subheading">Subheading goes here</p>
+                <h1>Title here</h1>
+                <p>Paragraph here</p>
+              </div>
+              <div class="col-md-4">
+                <div class="stats">
+                  <h4>$52,016</h4>
+                  <h5>pledged of $6,000 goal</h5>
+
+                  <h4>4</h4>
+                  <h5>days to go</h5>
+
+                  <a class="btn btn-kickstarter">
+                    Back this project
+                    <span>$1 minimum pledge</span>
+                  </a>
+                </div>
+
+                <div class="pledges">
+                  <div class="pledge">
+                    <h5>Pledge $24 or more</h5>
+                    <p>Paragraph goes here</p>
+                  </div>
+                  <div class="pledge">
+                    <h5>Pledge $40 or more</h5>
+                    <p>Paragraph goes here</p>
+                  </div>
+                </div>
+
+                <div class="funding-period">
+                  <h5>Funding period</h5>
+                  <p>Nov 20 2014 - Dec 19 2014 (29 days)</p>
+                </div>
+            </div>
+          </div>
+      </div>
+    </div>
+            
+    <div class="footer">
+      <div class="container">
+        <div class="links row">
+          <div class="col-sm-3">
+            <h5>About us</h5>
+            <ul>
+              <li>What is Kickstarter?</li>
+              <li>2013 highlights</li>
+              <li>Who we are</li>
+              <li>Jobs</li>
+              <li>Press</li>
+              <li>Stats</li>
+              <li>Projects we love</li>
+            </ul>
+          </div>
+          <div class="col-sm-5">
+            <h5>Discover</h5>
+            <div class="row">
+              <div class="col-xs-6">
+                <ul>
+                  <li>Art</li>
+                  <li>Comics</li>
+                  <li>Crafts</li>
+                  <li>Dance</li>
+                  <li>Design</li>
+                  <li>Fashion</li>
+                  <li>Fashion</li>
+                  <li>Film &amp; Video</li>
+                  <li>Food</li>
+                </ul>
+              </div>
+              <div class="col-xs-6">
+                <ul>
+                  <li>Games</li>
+                  <li>Journalism</li>
+                  <li>Music</li>
+                  <li>Photography</li>
+                  <li>Publishing</li>
+                  <li>Technology</li>
+                  <li>Theater</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-3">
+            <h5>Hello</h5>
+            <ul>
+              <li>Twitter</li>
+              <li>Facebook</li>
+              <li>Tumblr</li>
+              <li>Instagram</li>
+              <li>Vine</li>
+            </ul>
+          </div>
+        </div>
+        <div class="bottom row">
+          <div class="col-md-2">
+            <img src="img/logo-grey.png" width="161px">
+          </div>
+          <div class="pull-right">
+            <p>&copy; 2014 Kickstarter, Inc</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
