added changes before frotn end

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -40,6 +40,9 @@
     <link href="css/style.css" rel='stylesheet'>
   </head>
   <body>
+
+<!-- Header -->
+
     <div class="header">
       <div class="container">
         <div class="col-md-2">
@@ -59,6 +62,8 @@
         </div>
       </div>
     </div>
+
+<!-- Header -->
 
     <div class="project">
       <div class="container">
@@ -96,6 +101,7 @@
         </div>
       </div>
     </div>
+
 
     <div class="popular">
       <div class="container">
