some new data for seeds and some front end code

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,3 +1,5 @@
+<%= render '/shared/header' %> 
+
 <p id="notice"><%= notice %></p>
 
 <h1>Listing Projects</h1>
@@ -225,7 +227,7 @@
         </div>
       </div>
     </div>
-            
+           <!--  
     <div class="footer">
       <div class="container">
         <div class="links row">
@@ -292,4 +294,8 @@
       </div>
     </div>
   </body>
-</html>
+</html> -->
+
+
+
+<%= render '/shared/footer' %> 
