--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,5 +1,11 @@
+<%= render '/shared/header' %> 
+
 <h1>New Project</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Back', projects_path %>
+
+
+
+<%= render '/shared/footer' %> 
