--- a/app/views/subjects/_form.html.erb
+++ b/app/views/subjects/_form.html.erb
@@ -11,11 +11,15 @@
     </div>
   <% end %>
 
-  <div class="field">
+<div class="field">
+  <div class=".form-group-lg floating-label-form-group controls">
+    <div class="field">
     <%= f.label :name %><br>
     <%= f.text_field :name %>
-  </div>
+    </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit%>
   </div>
+</div>
+</div>
 <% end %>
