--- a/app/views/subjects/new.html.erb
+++ b/app/views/subjects/new.html.erb
@@ -1,5 +1,19 @@
+<%= render '/shared/header' %> 
+
+<br>
+<br>
+<br>
+<br>
+
 <h1>New Subject</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', subjects_path %>
+<%= link_to 'Back', subjects_path, :class => "btn btn-kickstarter" %>
+
+<br>
+<br>
+<br>
+<br>
+
+<%= render '/shared/footer' %> 
