--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -1,9 +1,23 @@
+<%= render '/shared/header' %> 
+
 <p id="notice"><%= notice %></p>
+
+<br>
+<br>
+
+<h1>Show Subject</h1>
 
 <p>
   <strong>Name:</strong>
   <%= @subject.name %>
 </p>
 
-<%= link_to 'Edit', edit_subject_path(@subject) %> |
-<%= link_to 'Back', subjects_path %>
+<%= link_to 'Edit', edit_subject_path(@subject), :class => "btn btn-kickstarter" %> 
+<%= link_to 'Back', subjects_path, :class => "btn btn-kickstarter" %>
+
+<br>
+<br>
+<br>
+<br>
+
+<%= render '/shared/footer' %> 
