--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -8,7 +8,7 @@
     <div class="header">
       <div class="container">
         <div class="col-md-2">
-          <img src="img/logo.png" width="161px">
+          <img src="https://www.kickstarter.com/download/kickstarter-logo-light.png" width="161px">
         </div>
         <div class="col-md-3">
           <ul class="primary">
@@ -51,7 +51,7 @@
 
             <div class="row">
               <div class="col-xs-5">
-                <img src="http://placehold.it/390x280" width="100%">
+                <img src="http://bit.ly/1A93jpX" width="100%">
               </div>
               <div class="col-xs-7">
                 <h3 class="title">Title goes here</h3>
@@ -120,7 +120,7 @@
           
           <div class="col-sm-4">
             <div class="thumbnail">
-              <img src="http://placehold.it/358x265">
+              <img src="http://bit.ly/1tiq9Xi">
               <div class="caption">
                 <h3 class="title">Title goes here</h3>
                 <p class="author">by Author Here</p>
@@ -152,7 +152,7 @@
 
           <div class="col-sm-4">
             <div class="thumbnail">
-              <img src="http://placehold.it/358x265">
+              <img src="http://bit.ly/1B2CiGf">
               <div class="caption">
                 <h3 class="title">Title goes here</h3>
                 <p class="author">by Author Here</p>
@@ -184,7 +184,7 @@
 
           <div class="col-sm-4">
             <div class="thumbnail">
-              <img src="http://placehold.it/358x265">
+              <img src="http://bit.ly/1Blj0tE">
               <div class="caption">
                 <h3 class="title">Title goes here</h3>
                 <p class="author">by Author Here</p>
@@ -218,13 +218,6 @@
       </div>
     </div>
 
-    <div class="discover">
-      <div class="container">
-        <h2>Discover great projects with your friends!</h2>
-        <a href="#" class="btn btn-facebook">Connect with Facebook</a>
-      </div>
-    </div>
-
     <div class="feature">
       <div class="container">
         <h2>Where projects come from</h2>
@@ -233,6 +226,9 @@
         <a href="#" class="btn btn-kickstarter">Learn more</a>
       </div>
     </div>
+
+<!-- Footer -->
+
 
     <div class="footer">
       <div class="container">
@@ -259,7 +255,6 @@
                   <li>Crafts</li>
                   <li>Dance</li>
                   <li>Design</li>
-                  <li>Fashion</li>
                   <li>Fashion</li>
                   <li>Film &amp; Video</li>
                   <li>Food</li>
@@ -291,8 +286,9 @@
         </div>
         <div class="bottom row">
           <div class="col-md-2">
-            <img src="img/logo-grey.png" width="161px">
-          </div>
+            <img src="https://www.kickstarter.com/download/kickstarter-logo-light.png" width="161px">
+<!--             <img src="image/logo-grey.png" width="161px">
+ -->          </div>
           <div class="pull-right">
             <p>&copy; 2014 Kickstarter, Inc</p>
           </div>
