--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -12,6 +12,7 @@
   <% end %>
 
   <div class="field">
+  <div class=".form-group-lg floating-label-form-group controls">
     <%= f.label :title %><br>
     <%= f.text_field :title %>
   </div>
@@ -29,5 +30,6 @@
   </div>
   <div class="actions">
     <%= f.submit %>
+  </div>
   </div>
 <% end %>
