--- a/app/views/subjects/edit.html.erb
+++ b/app/views/subjects/edit.html.erb
@@ -1,6 +1,37 @@
-<h1>Editing Subject</h1>
+<%= render '/shared/header' %> 
 
-<%= render 'form' %>
+<br>
+<br>
 
-<%= link_to 'Show', @subject %> |
-<%= link_to 'Back', subjects_path %>
+<!-- <div class="container"> 
+    <div class="row">
+      <div class="col-md-12 text-left"> -->
+      <h1>Edit Subject</h1>
+<!--       </div> -->
+
+<!-- 	<div class="row">
+	  <div class="col-md-12 text-left"> -->
+	    <%= render 'form' %>
+<!-- 	  </div>
+	</div> -->
+
+<!-- 	<div class="row">
+	  <div class="col-md-12 text-left"> -->
+	  <%= link_to 'Show', @subject, :class => "btn btn-kickstarter btn-sm" %>
+	  <%= link_to 'Back', subjects_path, :class => "btn btn-kickstarter btn-sm" %>
+<!-- 	</div>
+	</div>
+</div> -->
+
+<br>
+<br>
+<br>
+<br>
+
+<!-- not styled
+
+<%= link_to 'Show', @subject %> 
+<%= link_to 'Back', subjects_path %> -->
+
+
+<%= render '/shared/footer' %> 
