--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -1,3 +1,5 @@
+<%= render '/shared/header' %> 
+
 <p id="notice"><%= notice %></p>
 
 <h1>Listing Subjects</h1>
@@ -185,7 +187,7 @@
       </div>
     </div>
 
-            
+<!--             
     <div class="footer">
       <div class="container">
         <div class="links row">
@@ -252,4 +254,7 @@
       </div>
     </div>
   </body>
-</html>
+</html> -->
+
+
+<%= render '/shared/footer' %> 
