--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,11 +1,25 @@
+<%= render '/shared/header' %> 
+
+<br>
+<br>
+
+
 <h1>Signup!</h1>
 
 <%= form_for :user, url: '/users' do |f| %>
 
-  Name: <%= f.text_field :name %>
-  Email: <%= f.text_field :email %>
-  Password: <%= f.password_field :password %>
-  Password Confirmation: <%= f.password_field :password_confirmation %>
-  <%= f.submit "Submit" %>
+  <p> Name: <%= f.text_field :name %> </p>
+  <p> Email: <%= f.text_field :email %> </p>
+  <p> Password: <%= f.password_field :password %> </p> 
+  <p> Password Confirmation: <%= f.password_field :password_confirmation %> <p> 
+  <p> <%= f.submit "Submit" %> <p>
 
 <% end %>
+
+<br>
+<br>
+<br>
+<br>
+
+
+<%= render '/shared/footer' %> 
