added changes to subjects and projects pages

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -22,6 +22,8 @@
         <td><%= project.creator %></td>
         <td><%= project.image %></td>
         <td><%= project.description %></td>
+        <td><%= project.goal %></td>
+        <td><%= project.total %></td>
         <td><%= link_to 'Show', project %></td>
         <td><%= link_to 'Edit', edit_project_path(project) %></td>
         <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
