--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -28,32 +28,6 @@
 
 <%= link_to 'New Subject', new_subject_path %>
 
-<!doctype html>
-<html>
-  <head>
-    <link href="css/bootstrap.css" rel='stylesheet'>
-    <link href="css/style.css" rel='stylesheet'>
-  </head>
-  <body>
-    <div class="header">
-      <div class="container">
-        <div class="col-md-2">
-          <img src="img/logo.png" width="161px">
-        </div>
-        <div class="col-md-3">
-          <ul class="primary">
-            <li>Discover</li>
-            <li>Start</li>
-          </ul>
-        </div>
-        <div class="pull-right">
-          <ul>
-            <li><a href="#">Sign up</a></li>
-            <li><a href="#">Log in</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
 
     <div class="subjects">
       <div class="container">
@@ -61,92 +35,18 @@
         <p>15 diverse categories. Thousands of amazing projects.</p>
 
         <div class="row">
-          <div class="col-md-1"></div>
-          <div class="col-md-2">
-            <a href="#" class="thumbnail">
-              <h3>Art</h3>
-            </a>
-          </div>
-          <div class="col-md-2">
-            <a href="#" class="thumbnail">
-              <h3>Comics</h3>
-            </a>
-          </div>
-          <div class="col-md-2">
-            <a href="#" class="thumbnail">
-              <h3>Crafts</h3>
-            </a>
-          </div>
-          <div class="col-md-2">
-            <a href="#" class="thumbnail">
-              <h3>Dance</h3>
-            </a>
-          </div>
-          <div class="col-md-2">
-            <a href="#" class="thumbnail">
-              <h3>Design</h3>
-            </a>
-          </div>
-          <div class="col-md-1"></div>
-        </div>
-        <div class="row">
-          <div class="col-md-1"></div>
-          <div class="col-md-2">
-            <a href="#" class="thumbnail">
-              <h3>Fashion</h3>
-            </a>
-          </div>
-          <div class="col-md-2">
-            <a href="#" class="thumbnail">
-              <h3>Film &amp; Video</h3>
-            </a>
-          </div>
-          <div class="col-md-2">
-            <a href="#" class="thumbnail">
-              <h3>Food</h3>
-            </a>
-          </div>
-          <div class="col-md-2">
-            <a href="#" class="thumbnail">
-              <h3>Games</h3>
-            </a>
-          </div>
-          <div class="col-md-2">
-            <a href="#" class="thumbnail">
-              <h3>Journalism</h3>
-            </a>
-          </div>
-          <div class="col-md-1"></div>
-        </div>
-        <div class="row">
-          <div class="col-md-1"></div>
-          <div class="col-md-2">
-            <a href="#" class="thumbnail">
-              <h3>Music</h3>
-            </a>
-          </div>
-          <div class="col-md-2">
-            <a href="#" class="thumbnail">
-              <h3>Photography</h3>
-            </a>
-          </div>
-          <div class="col-md-2">
-            <a href="#" class="thumbnail">
-              <h3>Publishing</h3>
-            </a>
-          </div>
-          <div class="col-md-2">
-            <a href="#" class="thumbnail">
-              <h3>Technology</h3>
-            </a>
-          </div>
-          <div class="col-md-2">
-            <a href="#" class="thumbnail">
-              <h3>Theater</h3>
-            </a>
-          </div>
-          <div class="col-md-1"></div>
-        </div>
+          <% @subjects.in_groups_of(5).each do |subject_group| %>
+            <div class="row">
+            <% subject_group.each do |subject| %>
+              <div class="col-md-2">
+                <%= link_to(subject, {class: "thumbnail"}) do %>
+                  <h3><%= subject.name %></h3>
+                <% end %>
+              </div>
+            <% end %>
+            </div>
+          <% end %>
+          
       </div>
     </div>
 
@@ -187,74 +87,6 @@
       </div>
     </div>
 
-<!--             
-    <div class="footer">
-      <div class="container">
-        <div class="links row">
-          <div class="col-sm-3">
-            <h5>About us</h5>
-            <ul>
-              <li>What is Kickstarter?</li>
-              <li>2013 highlights</li>
-              <li>Who we are</li>
-              <li>Jobs</li>
-              <li>Press</li>
-              <li>Stats</li>
-              <li>Projects we love</li>
-            </ul>
-          </div>
-          <div class="col-sm-5">
-            <h5>Discover</h5>
-            <div class="row">
-              <div class="col-xs-6">
-                <ul>
-                  <li>Art</li>
-                  <li>Comics</li>
-                  <li>Crafts</li>
-                  <li>Dance</li>
-                  <li>Design</li>
-                  <li>Fashion</li>
-                  <li>Fashion</li>
-                  <li>Film &amp; Video</li>
-                  <li>Food</li>
-                </ul>
-              </div>
-              <div class="col-xs-6">
-                <ul>
-                  <li>Games</li>
-                  <li>Journalism</li>
-                  <li>Music</li>
-                  <li>Photography</li>
-                  <li>Publishing</li>
-                  <li>Technology</li>
-                  <li>Theater</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-3">
-            <h5>Hello</h5>
-            <ul>
-              <li>Twitter</li>
-              <li>Facebook</li>
-              <li>Tumblr</li>
-              <li>Instagram</li>
-              <li>Vine</li>
-            </ul>
-          </div>
-        </div>
-        <div class="bottom row">
-          <div class="col-md-2">
-            <img src="img/logo-grey.png" width="161px">
-          </div>
-          <div class="pull-right">
-            <p>&copy; 2014 Kickstarter, Inc</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </body>
-</html> -->
 
 
 <%= render '/shared/footer' %> 
