--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -20,4 +20,174 @@
 <br>
 <br>
 
+
+<!-- Project Index Page -->
+
+
+<h1><%= @subject.name %></h1>
+
+    <div class="project">
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-5">
+            <img src="http://placehold.it/499x374" width="100%">
+          </div>
+          <div class="col-xs-7">
+            <h3 class="title">Title goes here</h3>
+            <p class="author">by Author Here</p>
+            <p class="description">Description goes here</p>
+            <div class="progress">
+              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
+                <span class="sr-only">40% Complete (success)</span>
+              </div>
+            </div>                
+          </div>
+
+          <div class="col-xs-1">
+            <h4>60%</h4>
+            <h5>funded</h5>
+          </div>
+          <div class="col-xs-1">
+            <h4>$18,246</h4>
+            <h5>pledged</h5>
+          </div>
+          <div class="col-xs-1">
+            <h4>187</h4>
+            <h5>backers</h5>
+          </div>
+          <div class="col-xs-2">
+            <h4>11</h4>
+            <h5>days to go</h5>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="popular">
+      <div class="container">
+        <div class="row">
+          
+          <div class="col-sm-4">
+            <h2>New &amp; Noteworthy</h2>
+            <div class="thumbnail">
+              <img src="http://placehold.it/358x265">
+              <div class="caption">
+                <h3 class="title">Title goes here</h3>
+                <p class="author">by Author Here</p>
+                <p class="description">Description goes here</p>
+                
+                <div class="progress">
+                  <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
+                    <span class="sr-only">40% Complete (success)</span>
+                  </div>
+                </div> 
+
+                <div class="row">
+                  <div class="col-xs-3">
+                    <h4>60%</h4>
+                    <h5>funded</h5>
+                  </div>
+                  <div class="col-xs-3">
+                    <h4>$18,246</h4>
+                    <h5>pledged</h5>
+                  </div>
+                  <div class="col-xs-3">
+                    <h4>11</h4>
+                    <h5>days to go</h5>
+                  </div>                
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-sm-4">
+            <h2>What's Popular</h2>
+            <div class="thumbnail">
+              <img src="http://placehold.it/358x265">
+              <div class="caption">
+                <h3 class="title">Title goes here</h3>
+                <p class="author">by Author Here</p>
+                <p class="description">Description goes here</p>
+                
+                <div class="progress">
+                  <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
+                    <span class="sr-only">40% Complete (success)</span>
+                  </div>
+                </div> 
+
+                <div class="row">
+                  <div class="col-xs-3">
+                    <h4>60%</h4>
+                    <h5>funded</h5>
+                  </div>
+                  <div class="col-xs-3">
+                    <h4>$18,246</h4>
+                    <h5>pledged</h5>
+                  </div>
+                  <div class="col-xs-3">
+                    <h4>11</h4>
+                    <h5>days to go</h5>
+                  </div>                
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-sm-4">
+            <h2>Art in New York</h2>
+            <div class="thumbnail">
+              <img src="http://placehold.it/358x265">
+              <div class="caption">
+                <h3 class="title">Title goes here</h3>
+                <p class="author">by Author Here</p>
+                <p class="description">Description goes here</p>
+                
+                <div class="progress">
+                  <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
+                    <span class="sr-only">40% Complete (success)</span>
+                  </div>
+                </div> 
+
+                <div class="row">
+                  <div class="col-xs-3">
+                    <h4>60%</h4>
+                    <h5>funded</h5>
+                  </div>
+                  <div class="col-xs-3">
+                    <h4>$18,246</h4>
+                    <h5>pledged</h5>
+                  </div>
+                  <div class="col-xs-3">
+                    <h4>11</h4>
+                    <h5>days to go</h5>
+                  </div>                
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
+    <div class="promo">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <h2>Success</h2>
+          </div>
+          <div class="col-md-4">
+            <h2>Community</h2>
+          </div>
+          <div class="col-md-4">
+            <h2>Start</h2>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
+
 <%= render '/shared/footer' %> 
