--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -25,151 +25,85 @@
 
 
 <h1><%= @subject.name %></h1>
+  <% @projects = @projects.to_a %>
+  <% first = @projects.shift %>
 
+    <% if first %>
     <div class="project">
       <div class="container">
         <div class="row">
           <div class="col-xs-5">
-            <img src="http://placehold.it/499x374" width="100%">
+            <img src="<%= first.image %>" width="100%">
           </div>
           <div class="col-xs-7">
-            <h3 class="title">Title goes here</h3>
-            <p class="author">by Author Here</p>
-            <p class="description">Description goes here</p>
+            <h3 class="title"><%= first.title %></h3>
+            <p class="author"><%= first.creator %></p>
+            <p class="description"><%= first.description %></p>
             <div class="progress">
-              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
-                <span class="sr-only">40% Complete (success)</span>
+              <% progress = (first.total / first.goal).to_i %>
+              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="<%= progress %>" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
+                <span class="sr-only"><%= progress %>% Complete (success)</span>
               </div>
             </div>                
           </div>
 
           <div class="col-xs-1">
-            <h4>60%</h4>
+            <h4><%= progress %>%</h4>
             <h5>funded</h5>
           </div>
           <div class="col-xs-1">
-            <h4>$18,246</h4>
+            <h4>$<%= first.total %></h4>
             <h5>pledged</h5>
           </div>
-          <div class="col-xs-1">
-            <h4>187</h4>
-            <h5>backers</h5>
-          </div>
           <div class="col-xs-2">
-            <h4>11</h4>
+            <h4><%= distance_of_time_in_words(Time.now, Time.now + 30.days) %></h4>
             <h5>days to go</h5>
           </div>
         </div>
       </div>
     </div>
-
-
-    <div class="popular">
+    <% end %>
+    <% @projects.in_groups_of(3).each do |projects_group| %>
       <div class="container">
         <div class="row">
-          
-          <div class="col-sm-4">
-            <h2>New &amp; Noteworthy</h2>
-            <div class="thumbnail">
-              <img src="http://placehold.it/358x265">
-              <div class="caption">
-                <h3 class="title">Title goes here</h3>
-                <p class="author">by Author Here</p>
-                <p class="description">Description goes here</p>
-                
-                <div class="progress">
-                  <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
-                    <span class="sr-only">40% Complete (success)</span>
-                  </div>
-                </div> 
+          <% projects_group.each do |project| %>
+            <% next unless project %>
+            <div class="col-sm-4">
+              <div class="thumbnail">
+                <img src="<%= project.image %>">
+                <div class="caption">
+                  <h3 class="title"><%= project.title %></h3>
+                  <p class="author"><%= project.creator %></p>
+                  <p class="description"><%= project.description %></p>
+                  
+                  <div class="progress">
+                    <% progress = (project.total / project.goal).to_i %>
+                    <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+                      <span class="sr-only"><%= project %>% Complete (success)</span>
+                    </div>
+                  </div> 
 
-                <div class="row">
-                  <div class="col-xs-3">
-                    <h4>60%</h4>
-                    <h5>funded</h5>
+                  <div class="row">
+                    <div class="col-xs-3">
+                      <h4><%= progress %>%</h4>
+                      <h5>funded</h5>
+                    </div>
+                    <div class="col-xs-3">
+                      <h4>$<%= project.total %></h4>
+                      <h5>pledged</h5>
+                    </div>
+                    <div class="col-xs-3">
+                      <h4><%= distance_of_time_in_words(Time.now, Time.now + 30.days) %></h4>
+                      <h5>days to go</h5>
+                    </div>                
                   </div>
-                  <div class="col-xs-3">
-                    <h4>$18,246</h4>
-                    <h5>pledged</h5>
-                  </div>
-                  <div class="col-xs-3">
-                    <h4>11</h4>
-                    <h5>days to go</h5>
-                  </div>                
                 </div>
               </div>
             </div>
-          </div>
-
-          <div class="col-sm-4">
-            <h2>What's Popular</h2>
-            <div class="thumbnail">
-              <img src="http://placehold.it/358x265">
-              <div class="caption">
-                <h3 class="title">Title goes here</h3>
-                <p class="author">by Author Here</p>
-                <p class="description">Description goes here</p>
-                
-                <div class="progress">
-                  <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
-                    <span class="sr-only">40% Complete (success)</span>
-                  </div>
-                </div> 
-
-                <div class="row">
-                  <div class="col-xs-3">
-                    <h4>60%</h4>
-                    <h5>funded</h5>
-                  </div>
-                  <div class="col-xs-3">
-                    <h4>$18,246</h4>
-                    <h5>pledged</h5>
-                  </div>
-                  <div class="col-xs-3">
-                    <h4>11</h4>
-                    <h5>days to go</h5>
-                  </div>                
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-sm-4">
-            <h2>Art in New York</h2>
-            <div class="thumbnail">
-              <img src="http://placehold.it/358x265">
-              <div class="caption">
-                <h3 class="title">Title goes here</h3>
-                <p class="author">by Author Here</p>
-                <p class="description">Description goes here</p>
-                
-                <div class="progress">
-                  <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
-                    <span class="sr-only">40% Complete (success)</span>
-                  </div>
-                </div> 
-
-                <div class="row">
-                  <div class="col-xs-3">
-                    <h4>60%</h4>
-                    <h5>funded</h5>
-                  </div>
-                  <div class="col-xs-3">
-                    <h4>$18,246</h4>
-                    <h5>pledged</h5>
-                  </div>
-                  <div class="col-xs-3">
-                    <h4>11</h4>
-                    <h5>days to go</h5>
-                  </div>                
-                </div>
-              </div>
-            </div>
-          </div>
-
-        </div>
+            <% end %>
       </div>
     </div>
+    <% end %>
 
     <div class="promo">
       <div class="container">
