--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,4 +1,6 @@
 <!doctype html>
+<!-- Header -->
+
 <html>
   <head>
     <link href="css/bootstrap.css" rel='stylesheet'>
@@ -8,7 +10,7 @@
     <div class="header">
       <div class="container">
         <div class="col-md-2">
-          <img src="https://www.kickstarter.com/download/kickstarter-logo-light.png" width="161px">
+          <img src="img/logo.png" width="161px">
         </div>
         <div class="col-md-3">
           <ul class="primary">
@@ -18,8 +20,17 @@
         </div>
         <div class="pull-right">
           <ul>
-            <li><a href="#">Sign up</a></li>
-            <li><a href="#">Log in</a></li>
+          <% if current_user %>
+          Signed in as <strong> <%= current_user.name %></strong>
+          </ul>
+          <ul> 
+            <li><%= link_to "Logout", '/logout' %></a></li>
+          </ul>
+          <% else %> 
+          <ul>
+            <li><%= link_to "Login", '/login' %></a></li>
+            <li><%= link_to "Signup", '/signup' %></a></li>
+          <% end %> 
           </ul>
         </div>
       </div>
@@ -27,7 +38,7 @@
 
     <div class="jumbotron">
       <video autoplay muted loop> 
-        <source src="home.mp4" type="video/mp4"></source>
+        <source src="home.jpg" type="video/mp4"></source>
         <img src="home.jpg">
       </video>
       <div class="container content">
