--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -95,7 +95,7 @@
               <div class="col-md-8">
                 <img class="img-responsive" src=<%=@project.image %>>
                 <p class="subheading"></p>
-                <h1> Title goes here </h1>
+                <h1> <%= @project.title %> </h1>
                 <p><%= @project.description %></p>
               </div>
               <div class="col-md-4">
@@ -106,43 +106,21 @@
                   <h5>goal<h5>
                   <h1>4</h1>
                   <h5>days to go</h5>
-
-                  <a class="btn btn-kickstarter">
+                  <% pledges = @project.rewards %>
+                  <% min_pledge = pledges.shift %>
+                  <%= link_to(pledge_project_path(@project, amount: min_pledge), class: "btn btn-kickstarter") do %>
                     Back this project
                     <span>$1 minimum pledge</span>
-                  </a>
+                  <% end %>
                 </div>
 
                 <div class="pledges">
-                  <div class="pledge">
-                    <h5>Pledge $10 or more</h5>
-                    <p>Paragraph goes here</p>
-                  </div>
-                  <div class="pledge">
-                    <h5>Pledge $25 or more</h5>
-                    <p>Paragraph goes here</p>
-                  </div>
-                  <div class="pledge">
-                    <h5>Pledge $50 or more</h5>
-                    <p>Paragraph goes here</p>
-                  </div>
-                  <div class="pledge">
-                    <h5>Pledge $100 or more</h5>
-                    <p>Paragraph goes here</p>
-                  </div>
-                  <div class="pledge">
-                    <h5>Pledge $250 or more</h5>
-                    <p>Paragraph goes here</p>
-                  </div>
-                  <div class="pledge">
-                    <h5>Pledge $500 or more</h5>
-                    <p>Paragraph goes here</p>
-                  </div>
-                  <div class="pledge">
-                    <h5>Pledge $1000 or more</h5>
-                    <p>Paragraph goes here</p>
-                  </div>
-
+                  <% pledges.each do |pledge| %>
+                    <br>
+                    <%= link_to(pledge_project_path(@project, amount: pledge), class: "btn pledge") do %>
+                      <h5>Pledge $<%= pledge %> or more</h5>
+                    <% end %>
+                  <% end %>
                 </div>
             </div>
           </div>
