fixed assets and also the project pages

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -50,7 +50,7 @@
     <div class="header">
       <div class="container">
         <div class="col-md-2">
-          <img src="img/logo.png" width="161px">
+          <%= image_tag "logo.png", size: "161x20" %>
         </div>
         <div class="col-md-3">
           <ul class="primary">
@@ -224,10 +224,10 @@
         </div>
         <div class="bottom row">
           <div class="col-md-2">
-            <img src="img/logo-grey.png" width="161px">
+            <%= image_tag "logo-grey.png", size: "161x20" %>
           </div>
           <div class="pull-right">
-            <p>&copy; 2014 Kickstarter, Inc</p>
+            <p>&copy; 2015 Kickstarter, Inc</p>
           </div>
         </div>
       </div>
