--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -56,10 +56,10 @@
         </div>
         <div class="bottom row">
           <div class="col-md-2">
-            <img src="img/logo-grey.png" width="161px">
+            <%= image_tag "logo-grey.png", size: "161x20" %>
           </div>
           <div class="pull-right">
-            <p>&copy; 2014 Kickstarter, Inc</p>
+            <p>&copy; 2015 Kickstarter, Inc</p>
           </div>
         </div>
       </div>
