--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -9,7 +9,7 @@
     <div class="header">
       <div class="container">
         <div class="col-md-2">
-          <img src="img/logo.png" width="161px">
+          <%= image_tag "logo.png", size: "161x20" %>
         </div>
         <div class="col-md-3">
           <ul class="primary">
@@ -22,14 +22,14 @@
           <% if current_user %>
           Signed in as <strong> <%= current_user.name %></strong>
           </ul>
-          <ul> 
+          <ul>
             <li><%= link_to "Logout", '/logout' %></a></li>
           </ul>
-          <% else %> 
+          <% else %>
           <ul>
             <li><%= link_to "Login", '/login' %></a></li>
             <li><%= link_to "Signup", '/signup' %></a></li>
-          <% end %> 
+          <% end %>
           </ul>
         </div>
       </div>
@@ -38,7 +38,7 @@
 
 
 
-<!-- 
+<!--
 
             <div class="pull-right">
           <ul>
