--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -35,16 +35,4 @@
       </div>
     </div>
 
-
-
-
-<!-- 
-
-            <div class="pull-right">
-          <ul>
-            <li><a href="">Sign up</a></li>
-            <li><a href="#">Log in</a></li>
-          </ul>
-        </div>
-      </div>
-    </div> -->
+  <!-- Header -->
