--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,5 +1,48 @@
 <%= render '/shared/header' %> 
 
+<!-- Header -->
+
+<html>
+  <head>
+    <link href="css/bootstrap.css" rel='stylesheet'>
+    <link href="css/style.css" rel='stylesheet'>
+  </head>
+  <body>
+    <div class="header">
+      <div class="container">
+        <div class="col-md-2">
+          <img src="img/logo.png" width="161px">
+        </div>
+        <div class="col-md-3">
+          <ul class="primary">
+            <li>Discover</li>
+            <li>Start</li>
+          </ul>
+        </div>
+        <div class="pull-right">
+          <ul>
+          <% if current_user %>
+          Signed in as <strong> <%= current_user.name %></strong>
+          </ul>
+          <ul> 
+            <li><%= link_to "Logout", '/logout' %></a></li>
+          </ul>
+          <% else %> 
+          <ul>
+            <li><%= link_to "Login", '/login' %></a></li>
+            <li><%= link_to "Signup", '/signup' %></a></li>
+          <% end %> 
+          </ul>
+        </div>
+      </div>
+    </div>
+
+<!-- Header -->
+
+
+
+<!-- Project View -->
+
 <p id="notice"><%= notice %></p>
 
 <h1>Listing Projects</h1>
@@ -36,38 +79,10 @@
 
 <%= link_to 'New Project', new_project_path %>
 
+<!-- Project View -->
 
-<!doctype html>
-<html>
-  <head>
-    <link href="css/bootstrap.css" rel='stylesheet'>
-    <link href="css/style.css" rel='stylesheet'>
-  </head>
-  <body>
 
-<!-- Header -->
-
-    <div class="header">
-      <div class="container">
-        <div class="col-md-2">
-          <img src="img/logo.png" width="161px">
-        </div>
-        <div class="col-md-3">
-          <ul class="primary">
-            <li>Discover</li>
-            <li>Start</li>
-          </ul>
-        </div>
-        <div class="pull-right">
-          <ul>
-            <li><a href="#">Sign up</a></li>
-            <li><a href="#">Log in</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-
-<!-- Header -->
+<!-- Bootstrapped Project View -->
 
     <div class="project">
       <div class="container">
@@ -229,7 +244,12 @@
         </div>
       </div>
     </div>
-           <!--  
+
+
+<!-- End Bootstrapped Project View --> 
+
+<!-- Footer -->
+
     <div class="footer">
       <div class="container">
         <div class="links row">
@@ -255,7 +275,6 @@
                   <li>Crafts</li>
                   <li>Dance</li>
                   <li>Design</li>
-                  <li>Fashion</li>
                   <li>Fashion</li>
                   <li>Film &amp; Video</li>
                   <li>Food</li>
@@ -296,8 +315,9 @@
       </div>
     </div>
   </body>
-</html> -->
+</html>
 
+<!-- Footer -->
 
 
 <%= render '/shared/footer' %> 
