--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,4 +1,42 @@
-<%= render '/shared/header' %>
+<!-- Header -->
+
+<html>
+  <head>
+    <link href="css/bootstrap.css" rel='stylesheet'>
+    <link href="css/style.css" rel='stylesheet'>
+  </head>
+  <body>
+    <div class="header">
+      <div class="container">
+        <div class="col-md-2">
+          <%= image_tag "logo.png", size: "161x20" %>
+        </div>
+        <div class="col-md-3">
+          <ul class="primary">
+            <li>Discover</li>
+            <li>Start</li>
+          </ul>
+        </div>
+        <div class="pull-right">
+          <ul>
+          <% if current_user %>
+          Signed in as <strong> <%= current_user.name %></strong>
+          </ul>
+          <ul>
+            <li><%= link_to "Logout", '/logout' %></a></li>
+          </ul>
+          <% else %>
+          <ul>
+            <li><%= link_to "Login", '/login' %></a></li>
+            <li><%= link_to "Signup", '/signup' %></a></li>
+          <% end %>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+<!-- Header -->
+
 
 <p id="notice"><%= notice %></p>
 
@@ -164,7 +202,10 @@
         </div>
       </div>
     </div>
-           <!--
+
+
+<!-- Footer -->
+
     <div class="footer">
       <div class="container">
         <div class="links row">
@@ -190,7 +231,6 @@
                   <li>Crafts</li>
                   <li>Dance</li>
                   <li>Design</li>
-                  <li>Fashion</li>
                   <li>Fashion</li>
                   <li>Film &amp; Video</li>
                   <li>Food</li>
@@ -231,8 +271,4 @@
       </div>
     </div>
   </body>
-</html> -->
-
-
-
-<%= render '/shared/footer' %>
+</html>
