--- a/app/views/subjects/edit.html.erb
+++ b/app/views/subjects/edit.html.erb
@@ -1,27 +1,54 @@
-<%= render '/shared/header' %> 
+<!-- Header -->
+
+<html>
+  <head>
+    <link href="css/bootstrap.css" rel='stylesheet'>
+    <link href="css/style.css" rel='stylesheet'>
+  </head>
+  <body>
+    <div class="header">
+      <div class="container">
+        <div class="col-md-2">
+          <%= image_tag "logo.png", size: "161x20" %>
+        </div>
+        <div class="col-md-3">
+          <ul class="primary">
+            <li>Discover</li>
+            <li>Start</li>
+          </ul>
+        </div>
+        <div class="pull-right">
+          <ul>
+          <% if current_user %>
+          Signed in as <strong> <%= current_user.name %></strong>
+          </ul>
+          <ul>
+            <li><%= link_to "Logout", '/logout' %></a></li>
+          </ul>
+          <% else %>
+          <ul>
+            <li><%= link_to "Login", '/login' %></a></li>
+            <li><%= link_to "Signup", '/signup' %></a></li>
+          <% end %>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+<!-- Header -->
+
 
 <br>
 <br>
 
-<!-- <div class="container"> 
-    <div class="row">
-      <div class="col-md-12 text-left"> -->
+
       <h1>Edit Subject</h1>
-<!--       </div> -->
 
-<!-- 	<div class="row">
-	  <div class="col-md-12 text-left"> -->
 	    <%= render 'form' %>
-<!-- 	  </div>
-	</div> -->
 
-<!-- 	<div class="row">
-	  <div class="col-md-12 text-left"> -->
 	  <%= link_to 'Show', @subject, :class => "btn btn-kickstarter btn-sm" %>
 	  <%= link_to 'Back', subjects_path, :class => "btn btn-kickstarter btn-sm" %>
-<!-- 	</div>
-	</div>
-</div> -->
+
 
 <br>
 <br>
@@ -34,4 +61,71 @@
 <%= link_to 'Back', subjects_path %> -->
 
 
-<%= render '/shared/footer' %> 
+<%= render '/shared/footer' %> <!-- Footer -->
+
+    <div class="footer">
+      <div class="container">
+        <div class="links row">
+          <div class="col-sm-3">
+            <h5>About us</h5>
+            <ul>
+              <li>What is Kickstarter?</li>
+              <li>2013 highlights</li>
+              <li>Who we are</li>
+              <li>Jobs</li>
+              <li>Press</li>
+              <li>Stats</li>
+              <li>Projects we love</li>
+            </ul>
+          </div>
+          <div class="col-sm-5">
+            <h5>Discover</h5>
+            <div class="row">
+              <div class="col-xs-6">
+                <ul>
+                  <li>Art</li>
+                  <li>Comics</li>
+                  <li>Crafts</li>
+                  <li>Dance</li>
+                  <li>Design</li>
+                  <li>Fashion</li>
+                  <li>Film &amp; Video</li>
+                  <li>Food</li>
+                </ul>
+              </div>
+              <div class="col-xs-6">
+                <ul>
+                  <li>Games</li>
+                  <li>Journalism</li>
+                  <li>Music</li>
+                  <li>Photography</li>
+                  <li>Publishing</li>
+                  <li>Technology</li>
+                  <li>Theater</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-3">
+            <h5>Hello</h5>
+            <ul>
+              <li>Twitter</li>
+              <li>Facebook</li>
+              <li>Tumblr</li>
+              <li>Instagram</li>
+              <li>Vine</li>
+            </ul>
+          </div>
+        </div>
+        <div class="bottom row">
+          <div class="col-md-2">
+            <%= image_tag "logo-grey.png", size: "161x20" %>
+          </div>
+          <div class="pull-right">
+            <p>&copy; 2015 Kickstarter, Inc</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
