--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -1,4 +1,42 @@
-<%= render '/shared/header' %>
+<!-- Header -->
+
+<html>
+  <head>
+    <link href="css/bootstrap.css" rel='stylesheet'>
+    <link href="css/style.css" rel='stylesheet'>
+  </head>
+  <body>
+    <div class="header">
+      <div class="container">
+        <div class="col-md-2">
+          <%= image_tag "logo.png", size: "161x20" %>
+        </div>
+        <div class="col-md-3">
+          <ul class="primary">
+            <li>Discover</li>
+            <li>Start</li>
+          </ul>
+        </div>
+        <div class="pull-right">
+          <ul>
+          <% if current_user %>
+          Signed in as <strong> <%= current_user.name %></strong>
+          </ul>
+          <ul>
+            <li><%= link_to "Logout", '/logout' %></a></li>
+          </ul>
+          <% else %>
+          <ul>
+            <li><%= link_to "Login", '/login' %></a></li>
+            <li><%= link_to "Signup", '/signup' %></a></li>
+          <% end %>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+<!-- Header -->
+
 
 <p id="notice"><%= notice %></p>
 
@@ -90,4 +128,71 @@
 
 
 
-<%= render '/shared/footer' %>
+<!-- Footer -->
+
+    <div class="footer">
+      <div class="container">
+        <div class="links row">
+          <div class="col-sm-3">
+            <h5>About us</h5>
+            <ul>
+              <li>What is Kickstarter?</li>
+              <li>2013 highlights</li>
+              <li>Who we are</li>
+              <li>Jobs</li>
+              <li>Press</li>
+              <li>Stats</li>
+              <li>Projects we love</li>
+            </ul>
+          </div>
+          <div class="col-sm-5">
+            <h5>Discover</h5>
+            <div class="row">
+              <div class="col-xs-6">
+                <ul>
+                  <li>Art</li>
+                  <li>Comics</li>
+                  <li>Crafts</li>
+                  <li>Dance</li>
+                  <li>Design</li>
+                  <li>Fashion</li>
+                  <li>Film &amp; Video</li>
+                  <li>Food</li>
+                </ul>
+              </div>
+              <div class="col-xs-6">
+                <ul>
+                  <li>Games</li>
+                  <li>Journalism</li>
+                  <li>Music</li>
+                  <li>Photography</li>
+                  <li>Publishing</li>
+                  <li>Technology</li>
+                  <li>Theater</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-3">
+            <h5>Hello</h5>
+            <ul>
+              <li>Twitter</li>
+              <li>Facebook</li>
+              <li>Tumblr</li>
+              <li>Instagram</li>
+              <li>Vine</li>
+            </ul>
+          </div>
+        </div>
+        <div class="bottom row">
+          <div class="col-md-2">
+            <%= image_tag "logo-grey.png", size: "161x20" %>
+          </div>
+          <div class="pull-right">
+            <p>&copy; 2015 Kickstarter, Inc</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
